blocks/nav.css
.nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.nav__links {
  display: flex;
  column-gap: 20px;
  list-style-type: none;
  padding: 0;
  align-items: center;
  margin-top: 30px;
  margin-right: 80px;
}

.nav__link {
  color: #000000;
  text-decoration: none;
  font-weight: 500;
}

.nav__link:hover {
  color: #2f80ed;
  transition: color 0.5s ease-in;
}

